internal/suites/example/kube/test.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app1
  namespace: kube-public
  labels:
    app: test-app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-app1
  template:
    metadata:
      labels:
        app: test-app1
    spec:
      containers:
        - name: test-app1
          image: authelia/authelia:kube
          imagePullPolicy: Never
...
